# mac-agent-gateway

./: .env.example  .gitignore  EXAMPLES.md  Makefile  README.md  RELEASE.md  SECURITY.md  TODO.md  pyproject.toml
launchd/: com.ericblue.mag.plist
scripts/: clawdbot_skill_config.py  sign_skill.py  verify_skill.py
skills/mag-messages/: SKILL.md
skills/mag-reminders/: SKILL.md
src/mag/: __init__.py  auth.py  config.py  main.py
src/mag/models/: __init__.py  messages.py  reminders.py
src/mag/routers/: __init__.py  messages.py  reminders.py
src/mag/services/: __init__.py  contacts.py  imsg.py  pii.py  remindctl.py
src/mag/static/css/: cover.css
src/mag/templates/: index.html
tests/: __init__.py  conftest.py  test_auth.py  test_messages.py  test_pii.py  test_reminders.py  test_security.py
