[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mag"
version = "0.3.0"
description = "Mac Agent Gateway - Local macOS HTTP API gateway for Apple services"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Eric Blue" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "cryptography>=42.0.0",
]
signing = [
    "cryptography>=42.0.0",
]

[project.scripts]
mag = "mag.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/mag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
